[mediaframe] Make files added from paths into URLs.

This make it consistent with individual files added and fix a problem where the url isn't converted to a path properly in some conditions when the url doesn't contain the schema (file://).

BUG: 445071


(cherry picked from commit 181cc49c4d44a4ac926051ebf9a53d0a8fc6b253)